--- a/README
+++ b/README
@@ -36,13 +36,17 @@ Running
 Once compiled just type "basic" with any of the following command line options:
 
 Usage: basic
-      [-p <.bas file>] : BASIC program file
-      [-h <lines>]     : Number of history lines. Default = 20
-      [-r <run arg>]   : Sets _run_arg system variable
-      [-a]             : Autorun program
-      [--]             : Everything following this gets passed to BASIC as
-                         _argv with _argc system variables set
-
+       -p <.bas file> : BASIC program file.
+       -h <lines>     : Number of history lines. Default = 100
+       -r <run arg>   : Sets _run_arg system variable.
+       -a             : Autorun program.
+       -s             : Enforce strict mode which means normal variables must
+                        be declared with DIM before use.
+       -k             : Use 1024 bytes to calculate kilobytes in DIR* output
+                        instead of the default 1000.
+       -v             : Print version and build information then exit.
+       --             : Everything following this gets passed to BASIC as
+                        _argv with _argc system variables set.
 
 For questions or to report bugs not mentioned in BUGS then please email me 
 at the address below.
